--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
 
     //Inventaire
-    <string name="affichage_inventaire">Afficher l'inventaire</string>
+    <string name="affichage_inventaire">Afficher l\'inventaire</string>
     <string name="ajout_boisson">Ajouter une boisson</string>
     <string name="retrait_boisson">Retirer une boisson</string>
     <string name="modification_dataStock">Modifier les données</string>
