--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     // Carte
     <string name="beug">Aucune recherche spécifiée</string>
     <string name="title_activity_consult_details">consult_details</string>
+    <string name="consult_details_name_title">Nom de la boisson :</string>
+    <string name="consult_details_description_title">Description :</string>
+    <string name="consult_details_picture_title">Image :</string>
 </resources>
