--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="consult_details_name_title">Nom de la boisson :</string>
     <string name="consult_details_description_title">Description :</string>
     <string name="consult_details_picture_title">Image :</string>
+    <string name="title_activity_search">Search</string>
 </resources>
