--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="consult_details_description_title">Description :</string>
     <string name="consult_details_picture_title">Image :</string>
     <string name="title_activity_search">Search</string>
+    <string name="title_activity_paiement">Paiement</string>
+    <string name="title_activity_addition">Addition</string>
 </resources>
