--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
@@ -37,3 +37,4 @@
     <string name="boisson_erreur">Une erreur est survenue</string>
     <string name="Remplir_champs_boisson">"Remplir le champ Boisson !"</string>
 
+</resources>
