--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bar_tender</string>
+    <string name="app_name">Bar Tender</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
