Modification fonction dans les 3 langues

--- a/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     //Modification datastock
     <string name="modif">Modification du stock</string>
-    <string name="nomboisson">Boisson :</string>
+    <string name="nomboisson">Boisson </string>
     <string name="stock">Stock :</string>
     <string name="seuil">Seuil :</string>
     <string name="stockmax">Stock max :</string>
